[package]
name = "xdp-user-space"
version = "0.1.0"
edition = "2026"

[dependencies]
aya = { version = "0.3", features = ["async_tokio"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
dns-xdp-common = { path = "../dns-xdp-common" }
env_logger = "0.11"
log = "0.4"
